hard-gists/3130141/run.log
=== Docker Run Log for 3130141 ===
Started at: Mi 29. Okt 13:41:56 CET 2025

[2025-10-29 13:41:56] START: Running container for 3130141
[2025-10-29 13:41:57] SUCCESS: Container d88a3342edb3cb5338688d2fce1443c913b82440f148556214e1575329a53cc9 started for 3130141
=== Container logs for 3130141 ===
  File "/snippet.py", line 151
    print "Running: %s" % commandline
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3130141 ===
[2025-10-29 13:41:59] INFO: Container d88a3342edb3cb5338688d2fce1443c913b82440f148556214e1575329a53cc9 has stopped
